SalesOrderAttachment and PurchaseOrderAttachment

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -122,6 +122,7 @@
 
                 constructForm(url, {
                     fields: {
+                        filename: {},
                         comment: {},
                     },
                     onSuccess: reloadAttachmentTable,
