Corrected color of 'new' orders UI button

--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -105,7 +105,7 @@
         {% if roles.purchase_order.add %}
         <div id='po-button-bar'>
             <div class='button-toolbar container-fluid' style='float: right;'>
-                <button class='btn btn-primary' type='button' id='company-order2' title='{% trans "Create new purchase order" %}'>
+                <button class='btn btn-success' type='button' id='company-order2' title='{% trans "Create new purchase order" %}'>
                     <span class='fas fa-plus-circle'></span> {% trans "New Purchase Order" %}</button>
                 <div class='filter-list' id='filter-list-purchaseorder'>
                     <!-- Empty div -->
@@ -127,7 +127,7 @@
         {% if roles.sales_order.add %}
         <div id='so-button-bar'>
             <div class='button-toolbar container-fluid' style='float: right;'>
-                <button class='btn btn-primary' type='button' id='new-sales-order' title='{% trans "Create new sales order" %}'>
+                <button class='btn btn-success' type='button' id='new-sales-order' title='{% trans "Create new sales order" %}'>
                     <div class='fas fa-plus-circle'></div> {% trans "New Sales Order" %}
                 </button>
                 <div class='filter-list' id='filter-list-salesorder'>
