--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -74,7 +74,7 @@
         <div id='so-button-bar'>
             <div class='button-toolbar container-fluid' style='float: right;'>
                 {% if 0 %}
-                <button class='btn btn-primary' type='button' id='part-order2' title='{% trans "New sales order" %}'>{% trans "New Order" %}</button>
+                <button class='btn btn-success' type='button' id='part-order2' title='{% trans "New sales order" %}'>{% trans "New Order" %}</button>
                 {% endif %}
                 <div class='filter-list' id='filter-list-salesorder'>
                     <!-- An empty div in which the filter list will be constructed -->
