--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -185,7 +185,7 @@
         <div id='related-button-bar'>
             <div class='button-toolbar container-fluid' style='float: left;'>
                 {% if roles.part.change %}
-                <button class='btn btn-primary' type='button' id='add-related-part' title='{% trans "Add Related" %}'>{% trans "Add Related" %}</button>
+                <button class='btn btn-success' type='button' id='add-related-part' title='{% trans "Add Related" %}'>{% trans "Add Related" %}</button>
                 <div class='filter-list' id='filter-list-related'>
                     <!-- An empty div in which the filter list will be constructed -->
                 </div>
