--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -211,7 +211,7 @@
         </div>
         <div class="col col-md-4">
             <div id='internal-price-break-toolbar' class='btn-group'>
-                <button class='btn btn-primary' id='new-internal-price-break' type='button'>
+                <button class='btn btn-success' id='new-internal-price-break' type='button'>
                     <span class='fas fa-plus-circle'></span> {% trans "Add Internal Price Break" %}
                 </button>
             </div>
@@ -267,7 +267,7 @@
         </div>
         <div class="col col-md-4">
             <div id='price-break-toolbar' class='btn-group'>
-                <button class='btn btn-primary' id='new-price-break' type='button'>
+                <button class='btn btn-success' id='new-price-break' type='button'>
                     <span class='fas fa-plus-circle'></span> {% trans "Add Price Break" %}
                 </button>
             </div>
