--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -188,6 +188,11 @@ $("#edit-order").click(function() {
 });
 
 $("#receive-order").click(function() {
+
+    receivePurchaseOrder({{ order.pk }});
+
+    return;
+
     launchModalForm("{% url 'po-receive' order.id %}", {
         reload: true,
         secondary: [
