Disable filtering for total_price (as this is not a database field!)

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -364,7 +364,7 @@ $("#po-table").inventreeTable({
             }
         },
         {
-            sortable: true,
+            sortable: false,
             title: '{% trans "Total price" %}',
             formatter: function(value, row) {
                 var total = row.purchase_price * row.quantity;
