Fixes for ordering of stock table

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -383,7 +383,7 @@ $("#po-table").inventreeTable({
               }
         },
         {
-            sortable: true,
+            sortable: false,
             field: 'received',
             switchable: false,
             title: '{% trans "Received" %}',
