Enable sorting by total_price

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -364,7 +364,8 @@ $("#po-table").inventreeTable({
             }
         },
         {
-            sortable: false,
+            field: 'total_price',
+            sortable: true,
             title: '{% trans "Total price" %}',
             formatter: function(value, row) {
                 var total = row.purchase_price * row.quantity;
