--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -64,7 +64,9 @@
     {% endif %}
     {% if min_total_bom_purchase_price %}
     <tr>
-        <td><b>{% trans 'Unit Purchase Price' %}</b></td>
+        <td><b>{% trans 'Unit Purchase Price' %}</b>
+            {% if purchase_price_note %}<i class="fas fa-info-circle" title="{{purchase_price_note}}"></i>{% endif %}
+        </td>
         <td>Min: {% include "price.html" with price=min_unit_bom_purchase_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_bom_purchase_price %}</td>
     </tr>
