render newlines in templates

--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -50,7 +50,7 @@
                             <a href="#bom-cost" title='{% trans "Show BOM cost" %}'><span class="fas fa-search-dollar"></span></a>
                         </td>
                         <td>{% trans 'Unit Cost' %}
-                            {% if bom_price_note %}<i class="fas fa-info-circle" title="{{bom_price_note}}"></i>{% endif %}
+                            {% if bom_price_note %}<i class="fas fa-info-circle" title="{{bom_price_note|safe}}"></i>{% endif %}
                         </td>
                         <td>Min: {% include "price.html" with price=min_unit_bom_price %}</td>
                         <td>Max: {% include "price.html" with price=max_unit_bom_price %}</td>
@@ -69,7 +69,7 @@
                     <tr>
                         <td></td>
                         <td>{% trans 'Unit Purchase Price' %}
-                            {% if purchase_price_note %}<i class="fas fa-info-circle" title="{{purchase_price_note}}"></i>{% endif %}
+                            {% if purchase_price_note %}<i class="fas fa-info-circle" title="{{purchase_price_note|safe}}"></i>{% endif %}
                         </td>
                         <td>Min: {% include "price.html" with price=min_unit_bom_purchase_price %}</td>
                         <td>Max: {% include "price.html" with price=max_unit_bom_purchase_price %}</td>
