--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -9,11 +9,11 @@
 
 <table class='table table-striped table-condensed table-price-two'>
     <tr>
-        <td><b>{% trans 'Part' %}</b></td>
+        <td><strong>{% trans 'Part' %}</b></td>
         <td>{{ part  }}</td>
     </tr>
     <tr>
-        <td><b>{% trans 'Quantity' %}</b></td>
+        <td><strong>{% trans 'Quantity' %}</b></td>
         <td>{{ quantity }}</td>
     </tr>
 </table>
@@ -23,13 +23,13 @@
     <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_buy_price %}
     <tr>
-        <td><b>{% trans 'Unit Cost' %}</b></td>
+        <td><strong>{% trans 'Unit Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_unit_buy_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_buy_price %}</td>
     </tr>
     {% if quantity > 1 %}
     <tr>
-        <td><b>{% trans 'Total Cost' %}</b></td>
+        <td><strong>{% trans 'Total Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_total_buy_price %}</td>
         <td>Max: {% include "price.html" with price=max_total_buy_price %}</td>
     </tr>
@@ -49,26 +49,26 @@
     <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_bom_price %}
     <tr>
-        <td><b>{% trans 'Unit Cost' %}</b></td>
+        <td><strong>{% trans 'Unit Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_unit_bom_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_bom_price %}</td>
     </tr>
     {% if quantity > 1 %}
     <tr>
-        <td><b>{% trans 'Total Cost' %}</b></td>
+        <td><strong>{% trans 'Total Cost' %}</b></td>
         <td>Min: {% include "price.html" with price=min_total_bom_price %}</td>
         <td>Max: {% include "price.html" with price=max_total_bom_price %}</td>
     </tr>
     {% endif %}
     {% if min_total_bom_purchase_price %}
     <tr>
-        <td><b>{% trans 'Unit Purchase Price' %}</b></td>
+        <td><strong>{% trans 'Unit Purchase Price' %}</b></td>
         <td>Min: {% include "price.html" with price=min_unit_bom_purchase_price %}</td>
         <td>Max: {% include "price.html" with price=max_unit_bom_purchase_price %}</td>
     </tr>
     {% if quantity > 1 %}
     <tr>
-        <td><b>{% trans 'Total Purchase Price' %}</b></td>
+        <td><strong>{% trans 'Total Purchase Price' %}</b></td>
         <td>Min: {% include "price.html" with price=min_total_bom_purchase_price %}</td>
         <td>Max: {% include "price.html" with price=max_total_bom_purchase_price %}</td>
     </tr>
@@ -97,11 +97,11 @@
     <h4>{% trans 'Internal Price' %}</h4>
     <table class='table table-striped table-condensed table-price-two'>
         <tr>
-            <td><b>{% trans 'Unit Cost' %}</b></td>
+            <td><strong>{% trans 'Unit Cost' %}</b></td>
             <td>{% include "price.html" with price=unit_internal_part_price %}</td>
         </tr>
         <tr>
-            <td><b>{% trans 'Total Cost' %}</b></td>
+            <td><strong>{% trans 'Total Cost' %}</b></td>
             <td>{% include "price.html" with price=total_internal_part_price %}</td>
         </tr>
     </table>
@@ -112,11 +112,11 @@
     <h4>{% trans 'Sale Price' %}</h4>
     <table class='table table-striped table-condensed table-price-two'>
         <tr>
-            <td><b>{% trans 'Unit Cost' %}</b></td>
+            <td><strong>{% trans 'Unit Cost' %}</b></td>
             <td>{% include "price.html" with price=unit_part_price %}</td>
         </tr>
         <tr>
-            <td><b>{% trans 'Total Cost' %}</b></td>
+            <td><strong>{% trans 'Total Cost' %}</b></td>
             <td>{% include "price.html" with price=total_part_price %}</td>
         </tr>
     </table>
