--- a/InvenTree/templates/InvenTree/settings/user.html
+++ b/InvenTree/templates/InvenTree/settings/user.html
@@ -102,7 +102,7 @@
 </div>
 
 <div>
-    {% if form.accounts %}
+    {% if social_form.accounts %}
     <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
     
     
@@ -110,11 +110,11 @@
     {% csrf_token %}
     
     <fieldset>
-    {% if form.non_field_errors %}
-    <div id="errorMsg">{{ form.non_field_errors }}</div>
+    {% if social_form.non_field_errors %}
+    <div id="errorMsg">{{ social_form.non_field_errors }}</div>
     {% endif %}
     
-    {% for base_account in form.accounts %}
+    {% for base_account in social_form.accounts %}
     {% with base_account.get_provider_account as account %}
     <div>
     <label for="id_account_{{ base_account.id }}">
