--- a/InvenTree/templates/InvenTree/settings/user.html
+++ b/InvenTree/templates/InvenTree/settings/user.html
@@ -115,7 +115,8 @@
     <div>
     <label for="id_account_{{ base_account.id }}">
     <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-    <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>
+    <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">
+        <span class='brand-icon' brand_name='{{account.get_brand.id}}'></span>{{account.get_brand.name}}</span>
     {{ account }}
     </label>
     </div>
