--- a/InvenTree/templates/InvenTree/settings/user.html
+++ b/InvenTree/templates/InvenTree/settings/user.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 {% load inventree_extras %}
 {% load socialaccount %}
+{% load crispy_forms_tags %}
 
 {% block label %}account{% endblock %}
 
@@ -86,7 +87,7 @@
 
         <form method="post" action="{% url 'account_email' %}" class="add_email">
             {% csrf_token %}
-            {{ add_email_form.as_p }}
+            {{ add_email_form|crispy }}
             <button class="btn btn-primary" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
         </form>
     {% endif %}
