replace bold tags

--- a/InvenTree/part/templates/part/create_part.html
+++ b/InvenTree/part/templates/part/create_part.html
@@ -8,7 +8,7 @@
 
 {% if matches %}
 <div class='alert alert-block alert-warning'>
-    <b>{% trans "Possible Matching Parts" %}</b>
+    <strong>{% trans "Possible Matching Parts" %}</strong>
     <p>{% trans "The new part may be a duplicate of these existing parts" %}:</p>
     <ul class='list-group'>
     {% for match in matches %}
