--- a/InvenTree/stock/templates/stock/item_base.html
+++ b/InvenTree/stock/templates/stock/item_base.html
@@ -182,7 +182,7 @@
 
         {% if item.build %}
         <a href="{% url 'build-detail' item.build.id %}">
-            <b>{{ item.build }}</b>
+            <strong>{{ item.build }}</strong>
         </a>
         {% endif %}
 
