--- a/InvenTree/templates/InvenTree/search.html
+++ b/InvenTree/templates/InvenTree/search.html
@@ -47,7 +47,7 @@
     function addItemTitle(title) {
         // Add header block to the results list
         $('#search-item-list').append(
-            `<li class='list-group-item'><b>${title}</b></li>`
+            `<li class='list-group-item'><strong>${title}</strong></li>`
         );
     }
 
