--- a/InvenTree/templates/navbar.html
+++ b/InvenTree/templates/navbar.html
@@ -80,7 +80,7 @@
               <span class='fas fa-info-circle icon-green'></span>
               {% endif %}
               {% endif %}
-              <span class="fas fa-user"></span> <b>{{ user.get_username }}</b></a>
+              <span class="fas fa-user"></span> <strong>{{ user.get_username }}</strong></a>
             <ul class='dropdown-menu'>
                 {% if user.is_authenticated %}
                 {% if user.is_staff %}
