--- a/InvenTree/common/templates/common/edit_setting.html
+++ b/InvenTree/common/templates/common/edit_setting.html
@@ -6,7 +6,7 @@
 {{ block.super }}
 <!--
     <p>
-        <b>{{ name }}</b><br>
+        <strong>{{ name }}</strong><br>
         {{ description }}<br>
         <i>{% trans "Current value" %}: {{ value }}</i>
     </p>
