--- a/InvenTree/part/templates/part/bom.html
+++ b/InvenTree/part/templates/part/bom.html
@@ -17,7 +17,7 @@
 </div>
 {% else %}
 <div class='alert alert-danger alert-block'>
-    <b>{% blocktrans with part=part.full_name %}The BOM for <i>{{ part }}</i> has not been validated.{% endblocktrans %}</b>
+    <strong>{% blocktrans with part=part.full_name %}The BOM for <i>{{ part }}</i> has not been validated.{% endblocktrans %}</strong>
 </div>
 {% endif %}
 
