--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -18,7 +18,7 @@
             {% if part.supplier_count > 0 %}
                 {% if min_total_buy_price %}
                     <tr>
-                        <td><b>{% trans 'Supplier Pricing' %}</b>
+                        <td><strong>{% trans 'Supplier Pricing' %}</strong>
                             <a href="#supplier-cost" title='{% trans "Show supplier cost" %}'><span class="fas fa-search-dollar"></span></a>
                             <a href="#purchase-price" title='{% trans "Show purchase price" %}'><span class="fas fa-chart-bar"></span></a>
                         </td>
@@ -46,7 +46,7 @@
             {% if part.bom_count > 0 %}
                 {% if min_total_bom_price %}
                     <tr>
-                        <td><b>{% trans 'BOM Pricing' %}</b>
+                        <td><strong>{% trans 'BOM Pricing' %}</strong>
                             <a href="#bom-cost" title='{% trans "Show BOM cost" %}'><span class="fas fa-search-dollar"></span></a>
                         </td>
                         <td>{% trans 'Unit Cost' %}</td>
@@ -99,7 +99,7 @@
             {% if show_internal_price and roles.sales_order.view %}
             {% if total_internal_part_price %}
                 <tr>
-                    <td><b>{% trans 'Internal Price' %}</b></td>
+                    <td><strong>{% trans 'Internal Price' %}</strong></td>
                     <td>{% trans 'Unit Cost' %}</td>
                     <td colspan='2'>{% include "price.html" with price=unit_internal_part_price %}</td>
                 </tr>
@@ -113,7 +113,7 @@
         
             {% if total_part_price %}
                 <tr>
-                    <td><b>{% trans 'Sale Price' %}</b>
+                    <td><strong>{% trans 'Sale Price' %}</strong>
                         <a href="#sale-cost" title='{% trans "Show sale cost" %}'><span class="fas fa-search-dollar"></span></a>
                         <a href="#sale-price" title='{% trans "Show sale price" %}'><span class="fas fa-chart-bar"></span></a>
                     </td>
