--- a/InvenTree/part/templates/part/variant_part.html
+++ b/InvenTree/part/templates/part/variant_part.html
@@ -6,7 +6,7 @@
 {{ block.super }}
 
 <div class='alert alert-info alert-block'>
-    <b>{% trans "Create new part variant" %}</b><br>
+    <strong>{% trans "Create new part variant" %}</strong><br>
     {% blocktrans with full_name=part.full_name %}Create a new variant of template <i>'{{full_name}}'</i>.{% endblocktrans %}
 </div>
 
