--- a/InvenTree/templates/InvenTree/settings/setting.html
+++ b/InvenTree/templates/InvenTree/settings/setting.html
@@ -13,7 +13,7 @@
         <span class='fas {{ icon }}'></span>
         {% endif %}
     </td>
-    <td><b>{% trans setting.name %}</b></td>
+    <td><strong>{% trans setting.name %}</strong></td>
     <td>
         {% if setting.is_bool %}
         <div>
@@ -21,7 +21,7 @@
         </div>
         {% else %}
         <div id='setting-{{ setting.pk }}'>
-            <b>
+            <strong>
             <span id='setting-value-{{ setting.key.upper }}' fieldname='{{ setting.key.upper }}'>
                 {% if setting.value %}
                 {{ setting.value }}
@@ -29,7 +29,7 @@
                 <i>{% trans "No value set" %}</i>
                 {% endif %}
             </span>
-            </b>
+            </strong>
             {{ setting.units }}
         </div>
         {% endif %}
