replace i html tags

--- a/InvenTree/company/templates/company/manufacturer_part.html
+++ b/InvenTree/company/templates/company/manufacturer_part.html
@@ -225,7 +225,7 @@ $("#multi-parameter-delete").click(function() {
         <ul>`;
 
     selections.forEach(function(item) {
-        text += `<li>${item.name} - <i>${item.value}</i></li>`;
+        text += `<li>${item.name} - <em>${item.value}</em></li>`;
     });
 
     text += `
