--- a/InvenTree/templates/InvenTree/settings/setting.html
+++ b/InvenTree/templates/InvenTree/settings/setting.html
@@ -26,7 +26,7 @@
                 {% if setting.value %}
                 {{ setting.value }}
                 {% else %}
-                <i>{% trans "No value set" %}</i>
+                <em>{% trans "No value set" %}</em>
                 {% endif %}
             </span>
             </strong>
