--- a/InvenTree/common/templates/common/edit_setting.html
+++ b/InvenTree/common/templates/common/edit_setting.html
@@ -8,7 +8,7 @@
     <p>
         <strong>{{ name }}</strong><br>
         {{ description }}<br>
-        <i>{% trans "Current value" %}: {{ value }}</i>
+        <em>{% trans "Current value" %}: {{ value }}</em>
     </p>
 -->
 {% endblock %}
