--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -37,7 +37,7 @@
                 {% else %}
                     <tr>
                         <td colspan='4'>
-                            <span class='warning-msg'><i>{% trans 'No supplier pricing available' %}</i></span>
+                            <span class='warning-msg'><em>{% trans 'No supplier pricing available' %}</em></span>
                         </td>
                     </tr>
                 {% endif %}
@@ -83,14 +83,14 @@
                     {% if part.has_complete_bom_pricing == False %}
                         <tr>
                             <td colspan='4'>
-                                <span class='warning-msg'><i>{% trans 'Note: BOM pricing is incomplete for this part' %}</i></span>
+                                <span class='warning-msg'><em>{% trans 'Note: BOM pricing is incomplete for this part' %}</em></span>
                             </td>
                         </tr>
                     {% endif %}
                 {% else %}
                     <tr>
                         <td colspan='4'>
-                            <span class='warning-msg'><i>{% trans 'No BOM pricing available' %}</i></span>
+                            <span class='warning-msg'><em>{% trans 'No BOM pricing available' %}</em></span>
                         </td>
                     </tr>
                 {% endif %}
@@ -179,7 +179,7 @@
 </div>
 <div class='panel-content'>
     <h4>{% trans 'Stock Pricing' %}
-        <i class="fas fa-info-circle" title="Shows the purchase prices of stock for this part.&#10;The Supplier Unit Cost is the current purchase price for that supplier part."></i>
+        <i class="fas fa-info-circle" title="Shows the purchase prices of stock for this part.&#10;The Supplier Unit Cost is the current purchase price for that supplier part."></em>
     </h4>
         {% if price_history|length > 0 %}
             <div style="max-width: 99%; min-height: 300px">
