--- a/InvenTree/stock/templates/stock/stockitem_convert.html
+++ b/InvenTree/stock/templates/stock/stockitem_convert.html
@@ -5,7 +5,7 @@
 
 <div class='alert alert-block alert-info'>
     <strong>{% trans "Convert Stock Item" %}</strong><br>
-    {% blocktrans with part=item.part %}This stock item is current an instance of <i>{{part}}</i>{% endblocktrans %}<br>
+    {% blocktrans with part=item.part %}This stock item is current an instance of <em>{{part}}</em>{% endblocktrans %}<br>
     {% trans "It can be converted to one of the part variants listed below." %}
 </div>
 
