--- a/InvenTree/templates/about.html
+++ b/InvenTree/templates/about.html
@@ -87,7 +87,7 @@
                                 <td>
                                     <span style="display: none;" id="about-copy-text">{% include "version.html" %}</span>
                                     <span class="float-right">
-                                    <button class="btn clip-btn-version" type="button" data-toggle='tooltip' title='{% trans "copy to clipboard" %}'><i class="fas fa-copy"></em> {% trans "copy version information" %}</button>
+                                        <button class="btn clip-btn-version" type="button" data-toggle='tooltip' title='{% trans "copy to clipboard" %}'><em class="fas fa-copy"></em> {% trans "copy version information" %}</button>
                                     </span>
                                 </td>
                             </tr>
