--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -179,7 +179,7 @@
 </div>
 <div class='panel-content'>
     <h4>{% trans 'Stock Pricing' %}
-        <i class="fas fa-info-circle" title="Shows the purchase prices of stock for this part.&#10;The Supplier Unit Cost is the current purchase price for that supplier part."></em>
+        <em class="fas fa-info-circle" title="Shows the purchase prices of stock for this part.&#10;The Supplier Unit Cost is the current purchase price for that supplier part."></em>
     </h4>
         {% if price_history|length > 0 %}
             <div style="max-width: 99%; min-height: 300px">
