use user stylesheet

--- a/InvenTree/templates/account/base.html
+++ b/InvenTree/templates/account/base.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="{% static 'select2/css/select2.css' %}">
 <link rel="stylesheet" href="{% static 'css/inventree.css' %}">
 
+<link rel="stylesheet" href="{% get_color_theme_css user.get_username %}">
 
 <style>
     .login-error {
