doc for account base

--- a/InvenTree/templates/account/base.html
+++ b/InvenTree/templates/account/base.html
@@ -77,8 +77,12 @@
     {% block extra_body %}
     {% endblock %}
 
+<!-- Scripts -->
 <script type="text/javascript" src="{% static 'script/jquery_3.3.1_jquery.min.js' %}"></script>
+
+<!-- dynamic javascript templates -->
 <script type='text/javascript' src="{% url 'inventree.js' %}"></script>
+
 <script type='text/javascript' src="{% static 'fontawesome/js/solid.js' %}"></script>
 <script type='text/javascript' src="{% static 'fontawesome/js/brands.js' %}"></script>
 <script type='text/javascript' src="{% static 'fontawesome/js/fontawesome.js' %}"></script>
