--- a/InvenTree/templates/account/password_change.html
+++ b/InvenTree/templates/account/password_change.html
@@ -1,16 +1,21 @@
 {% extends "account/base.html" %}
 
-{% load i18n crispy_forms_tags %}
+{% load i18n crispy_forms_tags inventree_extras %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+
+{% settings_value 'LOGIN_ENABLE_PWD_FORGOT' as enable_pwd_forgot %}
+
     <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary" name="action">{% trans "Change Password" %}</button>
+        {% if enable_pwd_forgot %}
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        {% endif %}
     </form>
 {% endblock %}
