--- a/InvenTree/templates/account/base.html
+++ b/InvenTree/templates/account/base.html
@@ -33,18 +33,6 @@
         Background Image Attribution: https://unsplash.com/photos/Ixvv3YZkd7w
     -->
 
-    {% if messages %}
-    <div>
-        {% for message in messages %}
-        <div class='info-messages'>
-            <div class='alert alert-info alert-block' style='padding: 10px;'>
-            {{message}}
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-    {% endif %}
-
     <div class='main body-wrapper login-screen'>
 
         <div class='login-container'>
@@ -61,13 +49,16 @@
         </div>
         </div>
 
-    </div>
+        {% block extra_body %}
+        {% endblock %}
 
-    {% block extra_body %}
-    {% endblock %}
+        {% include 'notification.html' %}
+    </div>
 
 <!-- Scripts -->
 <script type="text/javascript" src="{% static 'script/jquery_3.3.1_jquery.min.js' %}"></script>
+<!-- general InvenTree -->
+<script type='text/javascript' src="{% static 'script/inventree/notification.js' %}"></script>
 
 <!-- dynamic javascript templates -->
 <script type='text/javascript' src="{% url 'inventree.js' %}"></script>
@@ -80,6 +71,15 @@
 <script type='text/javascript'>
 
 $(document).ready(function () {
+    // notifications
+    {% if messages %}
+    {% for message in messages %}
+    showAlertOrCache('alert-info', '{{message}}', true);
+    {% endfor %}
+    {% endif %}
+
+    showCachedAlerts();
+
     inventreeDocReady();
 });
 
