setting for two mail fields on signup

--- a/InvenTree/templates/InvenTree/settings/login.html
+++ b/InvenTree/templates/InvenTree/settings/login.html
@@ -22,6 +22,7 @@
             <td>{% trans 'Signup' %}</td>
             <td colspan='4'></td>
         </tr>
+        {% include "InvenTree/settings/setting.html" with key="LOGIN_SIGNUP_MAIL_TWICE" icon="fa-info-circle" %}
         {% include "InvenTree/settings/setting.html" with key="LOGIN_SIGNUP_SSO_AUTO" icon="fa-info-circle" %}
     </tbody>
 </table>
