--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -201,7 +201,9 @@ $('#new-po-line').click(function() {
         },
         method: 'POST',
         title: '{% trans "Add Line Item" %}',
-        onSuccess: reloadTable,
+        onSuccess: function() {
+            $('#po-line-table').bootstrapTable('refresh');
+        },
     });
 });
 
