--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -34,6 +34,7 @@
 {% include "InvenTree/settings/build.html" %}
 {% include "InvenTree/settings/po.html" %}
 {% include "InvenTree/settings/so.html" %}
+{% include "InvenTree/settings/plugin.html" %}
 
 {% plugin_list as pl_list %}
 {% for plugin_key, plugin in pl_list.items %}
