--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -22,4 +22,10 @@
     </tbody>
 </table>
 
+{% if plugin.has_urls %}
+<h4>{% trans "URLs" %}</h4>
+
+    <p>{% blocktrans with base=plugin.base_url %}The Base-URL for this plugin is <strong>{{ base }}</strong>.{% endblocktrans %}</p>
+{% endif %}
+
 {% endblock %}
