--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -26,6 +26,25 @@
 <h4>{% trans "URLs" %}</h4>
     {% define plugin.base_url as base %}
     <p>{% blocktrans %}The Base-URL for this plugin is <a href="/{{ base }}"><strong>{{ base }}</strong></a>.{% endblocktrans %}</p>
+
+    <table class='table table-striped table-condensed'>
+        <thead>
+            <tr>
+                <th>{% trans "Name" %}</th>
+                <th>{% trans "URL" %}</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for key, entry in plugin.urlpatterns.reverse_dict.items %}{% if key %}
+            <tr>
+                <td>{{key}}</td>
+                <td>{{entry.1}}</td>
+                <td><a href="/{{ base }}{{entry.1}}">{% trans 'open' %}</a></td>
+            </tr>
+            {% endif %}{% endfor %}
+        </tbody>
+    </table>
 {% endif %}
 
 {% endblock %}
