--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -25,7 +25,7 @@
 {% if plugin.has_urls %}
 <h4>{% trans "URLs" %}</h4>
     {% define plugin.base_url as base %}
-    <p>{% blocktrans %}The Base-URL for this plugin is <a href="/{{ base }}"><strong>{{ base }}</strong></a>.{% endblocktrans %}</p>
+    <p>{% blocktrans %}The Base-URL for this plugin is <a href="/{{ base }}" target="_blank"><strong>{{ base }}</strong></a>.{% endblocktrans %}</p>
 
     <table class='table table-striped table-condensed'>
         <thead>
@@ -40,7 +40,7 @@
             <tr>
                 <td>{{key}}</td>
                 <td>{{entry.1}}</td>
-                <td><a href="/{{ base }}{{entry.1}}">{% trans 'open' %}</a></td>
+                <td><a href="/{{ base }}{{entry.1}}" target="_blank">{% trans 'open in new tab' %}</a></td>
             </tr>
             {% endif %}{% endfor %}
         </tbody>
