make link a button

--- a/InvenTree/templates/InvenTree/settings/plugin.html
+++ b/InvenTree/templates/InvenTree/settings/plugin.html
@@ -18,6 +18,7 @@
     <thead>
         <tr>
             <th>{% trans "Name" %}</th>
+            <th>{% trans "Author" %}</th>
         </tr>
     </thead>
     
@@ -33,6 +34,7 @@
                     <span class='badge'><a class='nav-toggle text-success' id='select-plugin-{{plugin_key}}'>{% trans 'Has settings' %}</a></span>
                 {% endif %}
             </td>
+            <td># TODO</td>
         </tr>
         {% endfor %}
     </tbody>
