--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -40,7 +40,7 @@
             <tr>
                 <td>{{key}}</td>
                 <td>{{entry.1}}</td>
-                <td><a href="/{{ base }}{{entry.1}}" target="_blank">{% trans 'open in new tab' %}</a></td>
+                <td><a class="btn btn-primary btn-small" href="/{{ base }}{{entry.1}}" target="_blank">{% trans 'open in new tab' %}</a></td>
             </tr>
             {% endif %}{% endfor %}
         </tbody>
